force-app/main/default/objects/AcctPlanActionPlan__c/AcctPlanActionPlan__c.object-meta.xml
<CustomObject>
    <label>Account Plan Action Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Action Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>