force-app/main/default/objects/AcctPlanActionPlan__c/fields/AcctPlanWalletByDomain__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanWalletByDomain__c</fullName>
    <label>AccountPlanWalletByDomain</label>
    <referenceTo>AcctPlanWalletByDomain__c</referenceTo>
    <relationshipLabel>Account Plan Action Plan</relationshipLabel>
    <relationshipName>Account_Plan_Action_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>