force-app/main/default/objects/AcctPlanActionPlan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Objective__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pre Board</fullName>
            </value>
            <value>
                <fullName>On Board</fullName>
            </value>
            <value>
                <fullName>Post Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>