force-app/main/default/objects/AcctPlanActionPlan__c/fields/WinningPropostion__c.field-meta.xml
<CustomField>
    <fullName>WinningPropostion__c</fullName>
    <description>Winning Proposition</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Winning Proposition</inlineHelpText>
    <label>WinningPropostion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>